statum-macros/tests/ui/invalid_machine_not_struct.stderr
error: Error: #[machine] must be applied to a struct, but `NotAStruct` is an enum.
       Fix: declare `struct NotAStruct<State> { ... }` and apply `#[machine]` to that struct.
  --> tests/ui/invalid_machine_not_struct.rs:16:6
   |
16 | enum NotAStruct {
   |      ^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_machine_not_struct.rs:18:2
   |
18 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_machine_not_struct.rs`
